...
                android:text="@string/title"
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:inputType="text"
                android:textColor="@color/black" />
...
                android:padding="10sp"
                android:text="@string/company"
                android:textColor="@color/white"
                android:textAlignment="viewEnd"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/editTextCompany"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_column="1"
                android:background="@color/white"
                android:inputType="text"
                android:textColor="@color/black" />
...
                android:padding="10sp"
                android:text="@string/location"
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/editTextLocation"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_column="1"
                android:background="@color/white"
                android:inputType="text"
                android:textColor="@color/black" />
...
                android:text="@string/cost_of_living"
                android:textColor="@color/white"
                android:textAlignment="viewEnd"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextLivingCost"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_column="1"
                android:background="@color/white"
                android:inputType="text"
                android:textColor="@color/black" />
...
                android:text="@string/yearly_salary"
                android:textColor="@color/white"
                android:textAlignment="viewEnd"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextYearlySalary"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_column="1"
                android:background="@color/white"
                android:inputType="text"
                android:textColor="@color/black" />
...
                android:padding="10sp"
                android:text="@string/yearly_bonus"
                android:textColor="@color/white"
                android:textAlignment="viewEnd"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/editTextYearlyBonus"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_column="1"
                android:background="@color/white"
                android:inputType="text"
                android:textColor="@color/black" />
...
                android:padding="10sp"
                android:text="@string/restricted_stock_unit"
                android:textColor="@color/white"
                android:textAlignment="viewEnd"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/editTextRSU"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_column="1"
                android:background="@color/white"
                android:inputType="text"
                android:textColor="@color/black" />
...
                android:padding="10sp"
                android:text="@string/relocation_stipend"
                android:textColor="@color/white"
                android:textAlignment="viewEnd"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/editTextRelocation"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_column="1"
                android:background="@color/white"
                android:inputType="text"
                android:textColor="@color/black" />
...
                android:padding="10sp"
                android:text="@string/personal_holidays"
                android:textColor="@color/white"
                android:textAlignment="viewEnd"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/editTextHolidays"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_column="1"
                android:background="@color/white"
                android:inputType="text"
                android:textColor="@color/black" />
...
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/curJobSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="handleSaveClick"
            android:text="Save" />

        <Button
            android:id="@+id/curJobCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
...
